--- a/index.html
+++ b/index.html
@@ -6,53 +6,219 @@
     <title>GitHub User Info</title>
     <style>
         body {
-            font-family: sans-serif;
-            margin: 20px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            max-width: 600px;
+            text-align: center;
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+            animation: slideInLeft 0.7s ease-in-out;
+        }
+
+        @keyframes slideInLeft {
+            from { opacity: 0; transform: translateX(-50px); }
+            to { opacity: 1; transform: translateX(0); }
         }
 
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
+            font-weight: bold;
+            text-align: left;
+            animation: fadeIn 0.5s ease-in-out;
         }
 
         input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
+            width: calc(100% - 20px);
+            padding: 12px;
+            margin-bottom: 20px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
             box-sizing: border-box;
+            font-size: 16px;
+            transition: border-color 0.3s ease;
+            animation: slideInLeft 0.5s ease-in-out;
+        }
+
+        input[type="text"]:focus {
+            border-color: #007bff;
+            outline: none;
         }
 
         button {
-            background-color: #4CAF50;
+            background-color: #007bff;
             color: white;
-            padding: 10px 15px;
+            padding: 12px 20px;
             border: none;
             cursor: pointer;
             border-radius: 4px;
+            font-size: 16px;
+            transition: background-color 0.3s ease, transform 0.2s ease;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            animation: fadeInUp 0.6s ease-in-out;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+            transform: translateY(-2px);
+        }
+
+        button:active {
+            transform: translateY(0);
+            box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+        }
+
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         #user-info {
             margin-top: 20px;
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 4px;
+            padding: 20px;
+            border-radius: 8px;
+            background-color: #f9f9f9;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        #user-info h2 {
+            color: #007bff;
+            margin-bottom: 10px;
+            animation: slideInRight 0.7s ease-in-out;
+        }
+
+        @keyframes slideInRight {
+            from { opacity: 0; transform: translateX(50px); }
+            to { opacity: 1; transform: translateX(0); }
+        }
+
+        #user-info img {
+            width: 100px;
+            border-radius: 50%;
+            margin-bottom: 15px;
+            border: 3px solid #007bff;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            transition: transform 0.3s ease;
+        }
+
+        #user-info img:hover {
+            transform: scale(1.1);
+        }
+
+        #user-info p {
+            margin-bottom: 8px;
+            text-align: left;
+            animation: fadeIn 0.5s ease-in-out;
+        }
+
+        #user-info a {
+            color: #007bff;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        #user-info a:hover {
+            color: #0056b3;
+            text-decoration: underline;
         }
 
         .error {
-            color: red;
-            margin-top: 10px;
+            color: #dc3545;
+            margin-top: 15px;
+            font-weight: bold;
+            animation: shake 0.8s cubic-bezier(.36,.07,.19,.97) both;
+            transform: translate3d(0, 0, 0);
         }
+
+        @keyframes shake {
+            10%, 90% {
+                transform: translate3d(-1px, 0, 0);
+            }
+
+            20%, 80% {
+                transform: translate3d(2px, 0, 0);
+            }
+
+            30%, 70% {
+                transform: translate3d(-4px, 0, 0);
+            }
+
+            40%, 60% {
+                transform: translate3d(4px, 0, 0);
+            }
+
+            50% {
+                transform: translate3d(-2px, 0, 0);
+            }
+        }
+
+        .success-message {
+            color: #28a745;
+            font-weight: bold;
+            margin-top: 15px;
+            animation: tada 1s ease;
+        }
+
+        @keyframes tada {
+            0% {
+                transform: scale(1);
+            }
+            10%, 20% {
+                transform: scale(0.9) rotate(-3deg);
+            }
+            30%, 50%, 70% {
+                transform: scale(1.1) rotate(3deg);
+            }
+            40%, 60% {
+                transform: scale(1.1) rotate(-3deg);
+            }
+            80% {
+                transform: scale(1) rotate(0);
+            }
+            100% {
+                transform: scale(1) rotate(0);
+            }
+        }
+
     </style>
 </head>
 <body>
-    <h1>GitHub User Info</h1>
+    <div class="container">
+        <h1>GitHub User Info</h1>
 
-    <label for="username">GitHub Username:</label>
-    <input type="text" id="username" placeholder="Enter GitHub username">
-    <button onclick="getUserInfo()">Get Info</button>
+        <label for="username">GitHub Username:</label>
+        <input type="text" id="username" placeholder="Enter GitHub username">
+        <button onclick="getUserInfo()">Get Info</button>
 
-    <div id="user-info"></div>
-    <div id="error-message" class="error"></div>
+        <div id="user-info"></div>
+        <div id="error-message" class="error"></div>
+    </div>
 
     <script>
         async function getUserInfo() {
@@ -60,8 +226,9 @@
             const userInfoDiv = document.getElementById('user-info');
             const errorMessageDiv = document.getElementById('error-message');
 
-            errorMessageDiv.textContent = ''; // Clear any previous errors
-            userInfoDiv.innerHTML = ''; // Clear any previous info
+            // Clear previous messages
+            errorMessageDiv.textContent = '';
+            userInfoDiv.innerHTML = '';
 
             if (!username) {
                 errorMessageDiv.textContent = 'Please enter a username.';
@@ -70,6 +237,7 @@
 
             try {
                 const response = await fetch(`https://api.github.com/users/${username}`);
+
                 if (!response.ok) {
                     if (response.status === 404) {
                         errorMessageDiv.textContent = 'User not found.';
@@ -78,14 +246,21 @@
                     }
                     return;
                 }
-                const user = await response.json();
 
+                const user = await response.json();
                 const createdAt = new Date(user.created_at);
                 const formattedDate = createdAt.toLocaleDateString();
 
-                userInfoDiv.innerHTML = `
+                // Success message
+                errorMessageDiv.textContent = ''; // Clear any previous errors
+                const successMessageDiv = document.createElement('div');
+                successMessageDiv.classList.add('success-message');
+                successMessageDiv.textContent = 'User information fetched successfully!';
+                userInfoDiv.appendChild(successMessageDiv);
+
+                userInfoDiv.innerHTML += `
                     <h2>${user.login}</h2>
-                    <img src="${user.avatar_url}" alt="${user.login}'s avatar" style="width:100px; border-radius:50%;">
+                    <img src="${user.avatar_url}" alt="${user.login}'s avatar">
                     <p>Name: ${user.name || 'N/A'}</p>
                     <p>Bio: ${user.bio || 'N/A'}</p>
                     <p>Location: ${user.location || 'N/A'}</p>
